--- a/index.html
+++ b/index.html
@@ -18,10 +18,12 @@
                 <div class="cartao__conteudo">
                     <h3>Programação</h3>
                     <div class="cartao__conteudo__pergunta">
-                        O que é JavaScript?
+                        <p> O que é JavaScript? </p>
+                      
                     </div>
                     <div class="cartao__conteudo__resposta">
-                        O JavaScript é uma Linguagem de Programação.
+                        <P> O JavaScript é uma Linguagem de Programação. </P>
+                        
                     </div>
                 </div>
             </article>
