--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
                 <div class="cartao__conteudo">
                     <h3>Programação</h3>
                     <div class="cartao__conteudo__pergunta">
-                        O que é CSS?
+                       <P> O que é CSS? </P> 
                     </div>
                     <div class="cartao__conteudo__resposta">
-                        O CSS é uma Linguagem de estilização.
+                       <P>O CSS é uma Linguagem de estilização.</P> 
                     </div>
                 </div>
             </article>
