--- a/index.html
+++ b/index.html
@@ -26,11 +26,59 @@
                         
                     </div>
                 </div>
-            </article>
-
+            </article> 
+        
             <article class="cartao">
                 <div class="cartao__conteudo">
-                    <h3>Programação</h3>
+                    <h3>Programação 2.0</h3>
+                    <div class="cartao__conteudo__pergunta">
+                       <P> O que é CSS? </P> 
+                    </div>
+                    <div class="cartao__conteudo__resposta">
+                       <P>O CSS é uma Linguagem de estilização.</P> 
+                    </div>
+                </div>
+            </article>
+
+             <article class="cartao">
+                <div class="cartao__conteudo">
+                    <h3>Geografia</h3>
+                    <div class="cartao__conteudo__pergunta">
+                       <P> qual é a capital da frança </P> 
+                    </div>
+                    <div class="cartao__conteudo__resposta">
+                       <P> .</P> 
+                    </div>
+                </div>
+            </article>
+
+             <article class="cartao">
+                <div class="cartao__conteudo">
+                    <h3>3Programação</h3>
+                    <div class="cartao__conteudo__pergunta">
+                       <P> O que é CSS? </P> 
+                    </div>
+                    <div class="cartao__conteudo__resposta">
+                       <P>O CSS é uma Linguagem de estilização.</P> 
+                    </div>
+                </div>
+            </article>
+
+             <article class="cartao">
+                <div class="cartao__conteudo">
+                    <h3>4Programação</h3>
+                    <div class="cartao__conteudo__pergunta">
+                       <P> O que é CSS? </P> 
+                    </div>
+                    <div class="cartao__conteudo__resposta">
+                       <P>O CSS é uma Linguagem de estilização.</P> 
+                    </div>
+                </div>
+            </article>
+
+             <article class="cartao">
+                <div class="cartao__conteudo">
+                    <h3>5Programação</h3>
                     <div class="cartao__conteudo__pergunta">
                        <P> O que é CSS? </P> 
                     </div>
