--- a/index.html
+++ b/index.html
@@ -77,6 +77,8 @@
     <footer>
         <p>Projeto desenvolvido nas aulas de programação, sem fins lucrativos.</p>
     </footer>
+    <script src="app.js" ></script>
+    <script src="perguntas.js" ></script>
 
 </body>
 
