--- a/index.html
+++ b/index.html
@@ -51,10 +51,10 @@
                 <div class="cartao__conteudo">
                     <h3>Programação 2.0</h3>
                     <div class="cartao__conteudo__pergunta">
-                        <p>0 que é JavaScript?</p>
+                        <p>O que é uma função?</p>
                     </div>
                     <div class="cartao__conteudo__resposta">
-                        <p>0 JavaScript é uma linguagem de programação</p>
+                        <p>Uma função é um bloco de código que executa alguma tarefa</p>
                     </div>
                 </div>
             </article>
@@ -63,10 +63,10 @@
                 <div class="cartao__conteudo">
                     <h3>Programação 3.0</h3>
                     <div class="cartao__conteudo__pergunta">
-                        <p>0 que é JavaScript?</p>
+                        <p>Oque é Python?</p>
                     </div>
                     <div class="cartao__conteudo__resposta">
-                        <p>0 JavaScript é uma linguagem de programação</p>
+                        <p>é uma linguagem de Programação</p>
                     </div>
                 </div>
             </article>
